Correccion soporte idioma ingles a la retroalimentacion de donativo2.

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -269,7 +269,7 @@
         <item>12 monthly payment</item>
     </string-array>
     <string name="ingresa_contraseña">- Enter a password.</string>
-    <string name="ingresa_nombre_usuario">" - Enter a username."</string>
+    <string name="ingresa_nombre_usuario">"- Enter a username."</string>
     <string name="errores_detectados">Detected errors</string>
     <string name="entendido">OK</string>
     <string name="seleccione_fecha_graduacion">-- Select graduation date --</string>
@@ -280,20 +280,20 @@
     <string name="ingresa_segundo_ap">- Enter a maternal last name.</string>
     <string name="segundo_ap_solo_letras">"- Maternal last name must only contain letters. "</string>
     <string name="telefono_solo_numero">- Telephone requires only digits.</string>
-    <string name="ingresa_numero_telefono">" - Enter a phone number."</string>
+    <string name="ingresa_numero_telefono">"- Enter a phone number."</string>
     <string name="telefono_10_digitos">- Telephone requires 10 digits.</string>
     <string name="ingresa_email">- Enter a email.</string>
     <string name="email_no_valido">- Invalid email.</string>
     <string name="seleccione_categoria">- Select a category.</string>
     <string name="ingresa_calle">- Enter street</string>
-    <string name="calle_solo_letras">" - Street must only contain letters."</string>
-    <string name="ingresa_colonia">" - Enter a colony."</string>
-    <string name="colonia_solo_letras">" - Cologne must only contain letters."</string>
-    <string name="ingresa_municipio">" - Enter a municipality."</string>
-    <string name="ingresa_cp">- Municipality must only contain letters.</string>
-    <string name="municipio_solo_letras">" - Municipality must only contain letters."</string>
-    <string name="cp_solo_digitos">- Enter a zip code.</string>
+    <string name="calle_solo_letras">"- Street must only contain letters."</string>
+    <string name="ingresa_colonia">"- Enter a colony."</string>
+    <string name="colonia_solo_letras">"- Cologne must only contain letters."</string>
+    <string name="ingresa_municipio">"- Enter a municipality."</string>
+    <string name="ingresa_cp">- Enter a zip code.</string>
+    <string name="municipio_solo_letras">"- Municipality must only contain letters."</string>
+    <string name="cp_solo_digitos">- Zip Code requires only digits.</string>
     <string name="cp_5_digitos">- Zip Code requires 5 digits.</string>
-    <string name="seleccione_pais">" - Select a country."</string>
-    <string name="seleccione_estado">" - Select a state."</string>
+    <string name="seleccione_pais">"- Select a country."</string>
+    <string name="seleccione_estado">"- Select a state."</string>
 </resources>
