--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -349,7 +349,18 @@
     <string name="seleccione_pais">- Seleccione un pais.</string>
     <string name="seleccione_estado">- Seleccione un estado.</string>
 
-    
+    <string name="seleccione_cantidad">- Seleccione una cantidad.</string>
+    <string name="ingresa_cantidad">- Ingresa una cantidad.</string>
+    <string name="cantidad_solo_digitos">- Cantidad requiere solo digitos.</string>
+    <string name="cantidad_minima">- Cantidad minima igual a 10.</string>
+    <string name="cantidad_maxima">- Cantidad maxima igual a 1000000.</string>
+    <string name="seleccione_banco">- Seleccione un banco.</string>
+    <string name="seleccione_metodo_pago">- Seleccione un metodo de pago.</string>
+    <string name="ingrese_num_tarjeta">- Ingresa un numero de tarjeta.</string>
+    <string name="tarjeta_solo_digitos">- Numero de tarjeta requiere solo digitos.</string>
+    <string name="tarjeta_16_digitos">- Numero de tarjeta requiere 16 digitos.</string>
+    <string name="ingresa_vencimiento">- Ingresa la fecha de vencimiento de la tarjeta.</string>
+    <string name="vencimiento_invalido">- Fecha de vencimiento invalida.</string>
 
 
 
