--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -362,6 +362,7 @@
     <string name="vencimiento_invalido">- Fecha de vencimiento invalida.</string>
     <string name="seleccione_plazos">- Seleccione una cantidad de plazos.</string>
     <string name="acepte_terminos">- Acepte los terminos y condiciones.</string>
-
+    <string name="error_usuario_contraseña">Usuario y/o Contraseña Incorrectos</string>
+    <string name="falla_api">Falla en el API</string>
 
 </resources>
