--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -364,5 +364,6 @@
     <string name="acepte_terminos">- Acepte los terminos y condiciones.</string>
     <string name="error_usuario_contraseña">Usuario y/o Contraseña Incorrectos</string>
     <string name="falla_api">Falla en el API</string>
+    <string name="bienvenido">"Bienvenido "</string>
 
 </resources>
