--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -313,4 +313,5 @@
     <string name="falla_api">API failure</string>
     <string name="error_usuario_contraseña">Incorrect Username and/or Password</string>
     <string name="bienvenido">"Welcome "</string>
+    <string name="precaucion">Warning</string>
 </resources>
