--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -367,5 +367,10 @@
     <string name="bienvenido">"Bienvenido "</string>
     <string name="precaucion">Precaucion</string>
     <string name="error_agregar_usuario">Error al agregar el usuario</string>
+    <string name="error_actualizar_usuario">Error al actualizar el usuario</string>
+    <string name="confirma_contraseña">- Confirma tu contraseña.</string>
+    <string name="error_confirmacion_contraseña">- Error en confirmacion de contraseña.</string>
+    <string name="confirmacion_cancelar">¿Esta seguro de cancelar el registro del usuario?</string>
+    <string name="confirmacion_eliminar">¿Esta seguro de eliminar el usuario?</string>
 
 </resources>
