Se agrego confirmacion de cancelacion de donativo.

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -320,4 +320,5 @@
     <string name="error_confirmacion_contraseña">- Password confirmation error.</string>
     <string name="confirmacion_cancelar">Are you sure to cancel the user registration?</string>
     <string name="confirmacion_eliminar">Are you sure to delete the user?</string>
+    <string name="confirmacion_cancelar_donativo">Are you sure to cancel the donation?</string>
 </resources>
