--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -372,5 +372,6 @@
     <string name="error_confirmacion_contraseña">- Error en confirmacion de contraseña.</string>
     <string name="confirmacion_cancelar">¿Esta seguro de cancelar el registro del usuario?</string>
     <string name="confirmacion_eliminar">¿Esta seguro de eliminar el usuario?</string>
+    <string name="confirmacion_cancelar_donativo">¿Esta seguro de cancelar el donativo?</string>
 
 </resources>
