--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -373,5 +373,6 @@
     <string name="confirmacion_cancelar">¿Esta seguro de cancelar el registro del usuario?</string>
     <string name="confirmacion_eliminar">¿Esta seguro de eliminar el usuario?</string>
     <string name="confirmacion_cancelar_donativo">¿Esta seguro de cancelar el donativo?</string>
+    <string name="error_eliminar_usuario">Error al eliminar el Usuario</string>
 
 </resources>
