--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -340,4 +340,9 @@
     <string name="actualizar_usuario">Updating User</string>
     <string name="usuario_eliminado">User Deleted Successfully</string>
     <string name="error_eliminar">Failed to Delete User</string>
+    <string name="coincidencias_encontradas">match(es) found</string>
+    <string name="agregar_usuario">Add User</string>
+    <string name="usuarios_encontrados">user(s) found</string>
+    <string name="editar_usuario">Edit User</string>
+    <string name="eliminando_usuario">Deleting User</string>
 </resources>
