--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -345,4 +345,5 @@
     <string name="usuarios_encontrados">user(s) found</string>
     <string name="editar_usuario">Edit User</string>
     <string name="eliminando_usuario">Deleting User</string>
+    <string name="no_espacios">Password must not contain spaces</string>
 </resources>
