--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -393,7 +393,7 @@
     <string name="actualizar_usuario">Actualizando Usuario</string>
     <string name="usuario_eliminado">Usuario Eliminado Correctamente</string>
     <string name="error_eliminar">Error al Eliminar Usuario</string>
-    <string name="coincidencias_encontradas"> coincidencia(s) encontrada(s)</string>
+    <string name="coincidencias_encontradas">" coincidencia(s) encontrada(s)"</string>
     <string name="agregar_usuario">Agregar Usuario</string>
     <string name="usuarios_encontrados">" usuario(s) encontrado(s)"</string>
     <string name="editar_usuario">Editar Usuario</string>
@@ -403,5 +403,6 @@
     <string name="selecciona_filtro2">- Seleciona filtro.</string>
     <string name="ingresa_metodo_pago">- Ingresa un metodo de pago.</string>
     <string name="ingresa_categoria">- Ingresa una categoria.</string>
+    <string name="donaciones_encontradas">" donacion(es) encontrada(s)"</string>
 
 </resources>
