Correccion de validacion de fecha tarjeta.

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -360,4 +360,5 @@
         <item>Payment method</item>
     </string-array>
     <string name="donaciones_encontradas">" donation(s) found"</string>
+    <string name="tarjeta_vencida">- Card Expired or about to expire.</string>
 </resources>
